--- a/styles.css
+++ b/styles.css
@@ -28,11 +28,7 @@
     background: #555; 
   }
   
-/* @media screen and (max-width: 480px) {
-    body {
-      padding: 0.8em;
-    }
-  } */
+
   .navBar{
     display: flex;
     align-items: center;
@@ -46,13 +42,11 @@
   .navBar > h1,.navBar > navigationMenu{
     margin: 10px;
   }
-  /* .navigationMenu{
-    display: none;
-  } */
+  
   .navigationMenu > a{
     padding: 5px 10px;
     margin-left: 10px; 
-    /* margin-right: 15px; */
+    
     text-decoration: none;
     display: inline-block;
     color: white;
@@ -94,8 +88,7 @@
     position: absolute;
     top: 20%;
     width: 100%;
-    /* text-align: center; */
-    /* font-size: 18px; */
+   
     color: white;
    margin-left: 50px;
   }
@@ -147,24 +140,23 @@
   .enquire1,
   .enquire2 {
     position: relative;
-    width: 48%; /* Adjust the width as needed */
+    width: 48%; 
     box-sizing: border-box;
     overflow: hidden;
     height: 300px;
-    /* margin: 30px 20px; */
-    /* margin: 30px 30px 20px 20px; */
+  
     margin-top: 50px;
     margin-bottom: 50px;
   }
   
   .enquireimg {
     width: 100%;
-    height: auto; /* Ensure the image maintains its aspect ratio */
+    height: auto; 
     display: block;
-    height: 100%; /* Make both images take up 100% of the container */
-    object-fit: cover; /* Ensure the images maintain their aspect ratio and cover the container */
+    height: 100%; 
+    object-fit: cover; 
 
-    margin: 0;/* Remove margin for images */
+    margin: 0;
   }
   
   .box1,
@@ -177,7 +169,7 @@
     text-align: center;
     color: white;
     width: 50%; 
-    /* Adjust the width as needed */
+   
   }
   
   .box1 h3,
@@ -187,9 +179,9 @@
   
   .box1 p,
   .box2 p {
-    font-size: 16px; /* Adjust the font size for responsiveness */
+    font-size: 16px; 
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px; /* Add padding for better readability */
+    padding: 10px; 
   }
   
   .enquirebtn {
@@ -201,20 +193,7 @@
     margin-bottom: 10px;
   }
  
-/* @media only screen and (max-width: 720px) {
-    .enquire1,
-    .enquire2 {
-      width: 100%; 
-    }
-  
-    .box1,
-    .box2 {
-      width: 50%;
-    }
-  } */
-  
 
-/* */
 .footer {
     padding: 10px 20px;
     
@@ -245,10 +224,7 @@
     padding: 5px;
     cursor: pointer;
   }
-  /* Existing styles */
-/* Existing styles */
-
-/* Add this media query for screens up to 720px */
+  
 @media only screen and (max-width: 720px) {
     .navBar {
         padding: 10px;
@@ -287,7 +263,7 @@
     }
     .enquire {
         height: auto;
-        padding-bottom: 30px; /* Adjust the value as needed */
+        padding-bottom: 30px; 
     }
     .enquire1,
     .enquire2 {
@@ -328,7 +304,7 @@
     }
 }
 
-/* Add this media query for screens up to 460px */
+
 @media only screen and (max-width: 460px) {
     .navBar {
         padding: 10px;
@@ -360,7 +336,7 @@
     }
     .enquire {
         height: auto;
-        padding-bottom: 20px; /* Adjust the value as needed */
+        padding-bottom: 20px; 
     }
     .enquire-box {
         padding: 10px;
@@ -405,74 +381,3 @@
     }
 }
 
-/* Add this media query for screens up to 720px */
-/* Existing styles */
-
-/* Add this media query for screens up to 720px */
-/* @media only screen and (max-width: 720px) {
-    .heroSection .text {
-        top: 10%;
-        margin-left: 20px;
-    }
-
-    .span1 {
-        font-size: 24px;
-    }
-
-    .text .main-text {
-        font-size: 40px;
-    }
-
-    .about {
-        margin-top: 20px;
-    }
-
-    .readbutton {
-        margin-top: 20px;
-    }
-
-    .enquire-box {
-        padding: 15px;
-    }
-
-    .enquire1,
-    .enquire2 {
-        width: 100%;
-        margin: 20px 0;
-    }
-
-    .box1,
-    .box2 {
-        width: 100%;
-    }
-
-    .footer {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 20px 10px;
-    }
-
-    .footer-item {
-        width: 100%;
-        margin: 10px 0;
-        text-align: center;
-    }
-
-    .footer-heading {
-        margin-bottom: 10px;
-        font-size: 18px;
-    }
-
-    .footer ul li {
-        margin: 5px 0;
-        font-size: 14px;
-    }
-
-    .footer-item ul li {
-        opacity: 100%;
-    }
-}
-
-/* Add this media query for screens up to 460px */
-/*  */
