--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,62 @@
-
 /* universal selector */
 * {
     outline: none;
-    box-sizing:border-box;
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
-  
-  /* Smooth Scroll */
-  html{
+}
+
+/* Smooth Scroll */
+html {
     scroll-behavior: smooth;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
-  }
-  
-  /* Custom Scrollbar  */
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-  }
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-  
+}
 
-  .navBar{
+/* Custom Scrollbar  */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+
+.navBar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     border-bottom: 4px solid #FFB320;
     background-color: black;
-   padding: 20px;
-  }
-  
-  .navBar > h1,.navBar > navigationMenu{
+    padding: 20px;
+}
+
+.navBar>h1,
+.navBar>navigationMenu {
     margin: 10px;
-  }
-  
-  .navigationMenu > a{
+}
+
+.navigationMenu>a {
     padding: 5px 10px;
-    margin-left: 10px; 
-    
+    margin-left: 10px;
+
     text-decoration: none;
     display: inline-block;
     color: white;
 
-  }
-  .navigationMenu > button{
+}
+
+.navigationMenu>button {
     margin-left: 10px;
     background-color: #FFB320;
     color: black;
@@ -60,15 +64,16 @@
     padding: 10px;
     border-radius: 20px;
     border-style: none;
-  }
-  .navigationMenu > a:hover{
+}
+
+.navigationMenu>a:hover {
     transition: ease-in-out 300ms;
     color: #FFB320;
-  }
-  
-  
-  /* navbar styles end */  
-  .heroSection {
+}
+
+
+/* navbar styles end */
+.heroSection {
     position: relative;
     height: 100vh;
 }
@@ -84,23 +89,27 @@
     height: 100%;
     object-fit: cover;
 }
+
 .text {
     position: absolute;
     top: 20%;
     width: 100%;
-   
+
     color: white;
-   margin-left: 50px;
-  }
-  .span1{
-    color:#FFB320;
- background-color: black;
-  }
-  .text .main-text{
-    font: 60px Roboto ,sans-serif;
-    
-  }
-.readbutton{
+    margin-left: 50px;
+}
+
+.span1 {
+    color: #FFB320;
+    background-color: black;
+}
+
+.text .main-text {
+    font: 60px Roboto, sans-serif;
+
+}
+
+.readbutton {
     background-color: #FFB320;
     color: black;
     padding: 12px;
@@ -108,18 +117,19 @@
     border-style: none;
     margin-top: 30px;
 }
-.about{
+
+.about {
     margin-top: 30px;
     background-color: rgba(0, 0, 0, 0.7);
-  width: fit-content;
+    width: fit-content;
     padding: 10px;
-   
+
 }
 
 
-.enquire{
+.enquire {
     width: 100%;
- padding: 30px;
+    padding: 30px;
     margin-right: auto;
     margin-left: auto;
     height: 450px;
@@ -128,103 +138,105 @@
 
 
 
- 
+
 .enquire-box {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
- 
-  }
-  
-  .enquire1,
-  .enquire2 {
+
+}
+
+.enquire1,
+.enquire2 {
     position: relative;
-    width: 48%; 
+    width: 48%;
     box-sizing: border-box;
     overflow: hidden;
     height: 300px;
-  
+
     margin-top: 50px;
     margin-bottom: 50px;
-  }
-  
-  .enquireimg {
+}
+
+.enquireimg {
     width: 100%;
-    height: auto; 
+    height: auto;
     display: block;
-    height: 100%; 
-    object-fit: cover; 
+    height: 100%;
+    object-fit: cover;
 
     margin: 0;
-  }
-  
-  .box1,
-  .box2 {
+}
+
+.box1,
+.box2 {
     position: absolute;
     top: 50%;
     left: 50%;
- 
+
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
-    width: 50%; 
-   
-  }
-  
-  .box1 h3,
-  .box2 h3 {
+    width: 50%;
+
+}
+
+.box1 h3,
+.box2 h3 {
     margin: 10px 0;
-  }
-  
-  .box1 p,
-  .box2 p {
-    font-size: 16px; 
+}
+
+.box1 p,
+.box2 p {
+    font-size: 16px;
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px; 
-  }
-  
-  .enquirebtn {
+    padding: 10px;
+}
+
+.enquirebtn {
     padding: 10px;
     background-color: green;
     color: white;
     border-radius: 4px;
     border-style: none;
     margin-bottom: 10px;
-  }
- 
+}
+
 
 .footer {
     padding: 10px 20px;
-    
+
     color: #fff;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-  }
-  .footer-item {
+}
+
+.footer-item {
     width: 250px;
     margin: 10px;
     padding: 10px;
-  }
-  .footer-item ul li{
+}
+
+.footer-item ul li {
     opacity: 70%;
-  }
-  
-  .footer-heading {
+}
+
+.footer-heading {
     color: white;
     font-size: 20px;
     margin: 20px 0;
-  }
-  
-  .footer ul li {
+}
+
+.footer ul li {
     list-style: none;
     font-size: 15px;
     margin: 10px 0;
     padding: 5px;
     cursor: pointer;
-  }
-  
+}
+
 @media only screen and (max-width: 720px) {
     .navBar {
         padding: 10px;
@@ -233,9 +245,10 @@
     .navigationMenu {
         display: none;
     }
+
     .hamburger-icon {
         display: block;
-      }
+    }
 
     .heroSection .text {
         top: 10%;
@@ -261,10 +274,12 @@
     .enquire-box {
         padding: 15px;
     }
+
     .enquire {
         height: auto;
-        padding-bottom: 30px; 
+        padding-bottom: 30px;
     }
+
     .enquire1,
     .enquire2 {
         width: 100%;
@@ -318,7 +333,7 @@
         top: 5%;
         margin-left: 10px;
     }
-   
+
     .span1 {
         font-size: 18px;
     }
@@ -334,10 +349,12 @@
     .readbutton {
         margin-top: 10px;
     }
+
     .enquire {
         height: auto;
-        padding-bottom: 20px; 
+        padding-bottom: 20px;
     }
+
     .enquire-box {
         padding: 10px;
     }
@@ -380,4 +397,3 @@
         opacity: 100%;
     }
 }
-
